v2.4.1/_sources/LCLSGeneral_LCLSGeneral_summary.rst.txt

Settings
--------

.. list-table::
    :header-rows: 1
    :align: center

    * - Setting
      - Value
      - Description
    * - AMS Net ID
      - 5.40.55.128.1.1
      -
    * - Target IP address
      - 5.40.55.128
      - Based on AMS Net ID by convention
    * - AMS Port
      - 851
      -

.. _LCLSGeneral_pragmas:

Pragmas
-------

Total pragmas found: 87
Total linter errors: 0


Symbols
-------





.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        .TCPADS_MAXUDP_BUFFSIZE, UDINT, 4303872 (32)


Constants
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Constants.bFPUSupport, BOOL, 27202648 (8)
        Constants.bLittleEndian, BOOL, 27202584 (8)
        Constants.bSimulationMode, BOOL, 27202640 (8)
        Constants.CompilerVersion, VERSION, 27285568 (64)
        Constants.CompilerVersionNumeric, DWORD, 27285696 (32)
        Constants.nPackMode, UINT, 27285632 (16)
        Constants.nRegisterSize, WORD, 27203408 (16)
        Constants.RuntimeVersion, VERSION, 27285504 (64)
        Constants.RuntimeVersionNumeric, DWORD, 27285664 (32)


DefaultGlobals
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        DefaultGlobals.fTimeStamp, LREAL, 27202304 (64)
        DefaultGlobals.stSys, ST_System, 27202208 (88)
        DefaultGlobals.stSys.I_EcatMaster1, AMSNETID, 27202248 (48)


GVL
^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL.nLangId_OnlineMonitoring, DINT, 4306112 (32)


GVL_INTERNAL
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_INTERNAL.UNINITIALIZED_CLASS_GUID, GUID, 4306464 (128)


GVL_Logger
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Logger.bTrickleTripped, BOOL, 27202024 (8)
        GVL_Logger.cLogHost, STRING(15), 27202384 (128)
        GVL_Logger.fbRootLogger, FB_LogMessage, 8774400 (81856)
        GVL_Logger.iLogPort, UINT, 27202512 (16)
        GVL_Logger.nGlobAccEvents, UDINT, 27285440 (32)
        GVL_Logger.nLocalTrickleTripThreshold, TIME, 27202656 (32)
        GVL_Logger.nLocalTripThreshold, TIME, 27202592 (32)
        GVL_Logger.nMinTimeViolationAcceptable, INT, 27202624 (16)
        GVL_Logger.nTrickleThreshold, UDINT, 27285472 (32)
        GVL_Logger.nTrickleTripTime, TIME, 27202688 (32)
        GVL_Logger.nTripResetPeriod, TIME, 27202720 (32)
        GVL_Logger.sIpTidbit, STRING(6), 27202528 (56)
        GVL_Logger.sPlcHostname, STRING(80), 27202752 (648)
        GVL_Logger.TCPADS_MAXUDP_BUFFSIZE, UDINT, 27203424 (32)

.. raw:: html

   </details>
   <br />


GVL_Param_TcUnit
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Param_TcUnit.MaxNumberOfAsserts, UINT, 4306912 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 4306896 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 4306880 (16)


GVL_TcUnit
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_TcUnit.AdsLogger, TcUnit.FB_ADSLogStringMessageFifoQueue, 4325568 (4128864)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 4306928 (8)
        GVL_TcUnit.CurrentTestNameBeingCalled, Tc2_System.T_MaxString, 4307488 (2048)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO TcUnit.FB_TestSuite, 4307456 (32)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 4306936 (8)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 4309536 (16)
        GVL_TcUnit.TcUnitRunner, TcUnit.FB_TcUnitRunner, 4306944 (512)
        GVL_TcUnit.TestSuiteAddresses, ARRAY[1..500] OF POINTER TO TcUnit.FB_TestSuite, 4309568 (16000)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 4302824 (8)


Global_Constants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Constants.EMPTY_EVENT_CLASS, GUID, 4305760 (128)
        Global_Constants.EMPTY_EVENT_ID, UDINT, 4305888 (32)
        Global_Constants.EMPTY_SEVERITY, TcEventSeverity, 4302832 (16)
        Global_Constants.SUCCESS_EVENT, TcEventEntry, 4305920 (192)


Global_Variables
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>239 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Variables.ADSIGRP_DEVICE_DATA, UDINT, 4097664 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARI, UDINT, 4097568 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARO, UDINT, 4097600 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RISIZE, UDINT, 4097440 (32)
        Global_Variables.ADSIGRP_IOIMAGE_ROSIZE, UDINT, 4097536 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIB, UDINT, 4097376 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIOB, UDINT, 4097632 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIX, UDINT, 4097408 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOB, UDINT, 4097472 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOX, UDINT, 4097504 (32)
        Global_Variables.ADSIGRP_SYM_DOWNLOAD, UDINT, 4097248 (32)
        Global_Variables.ADSIGRP_SYM_HNDBYNAME, UDINT, 4097024 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAME, UDINT, 4097152 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAMEEX, UDINT, 4097216 (32)
        Global_Variables.ADSIGRP_SYM_RELEASEHND, UDINT, 4097120 (32)
        Global_Variables.ADSIGRP_SYM_UPLOAD, UDINT, 4097280 (32)
        Global_Variables.ADSIGRP_SYM_UPLOADINFO, UDINT, 4097312 (32)
        Global_Variables.ADSIGRP_SYM_VALBYHND, UDINT, 4097088 (32)
        Global_Variables.ADSIGRP_SYM_VALBYNAME, UDINT, 4097056 (32)
        Global_Variables.ADSIGRP_SYM_VERSION, UDINT, 4097184 (32)
        Global_Variables.ADSIGRP_SYMNAME, UDINT, 4096960 (32)
        Global_Variables.ADSIGRP_SYMNOTE, UDINT, 4097344 (32)
        Global_Variables.ADSIGRP_SYMTAB, UDINT, 4096928 (32)
        Global_Variables.ADSIGRP_SYMVAL, UDINT, 4096992 (32)
        Global_Variables.ADSIOFFS_DEVDATA_ADSSTATE, UDINT, 4097696 (32)
        Global_Variables.ADSIOFFS_DEVDATA_DEVSTATE, UDINT, 4097728 (32)
        Global_Variables.ADSLOG_MSGTYPE_ERROR, DWORD, 4098784 (32)
        Global_Variables.ADSLOG_MSGTYPE_HINT, DWORD, 4098720 (32)
        Global_Variables.ADSLOG_MSGTYPE_LOG, DWORD, 4098816 (32)
        Global_Variables.ADSLOG_MSGTYPE_MSGBOX, DWORD, 4098848 (32)
        Global_Variables.ADSLOG_MSGTYPE_RESOURCE, DWORD, 4098880 (32)
        Global_Variables.ADSLOG_MSGTYPE_STRING, DWORD, 4098912 (32)
        Global_Variables.ADSLOG_MSGTYPE_WARN, DWORD, 4098752 (32)
        Global_Variables.ADSSTATE_CONFIG, UINT, 4096832 (16)
        Global_Variables.ADSSTATE_ERROR, UINT, 4096768 (16)
        Global_Variables.ADSSTATE_EXCEPTION, UINT, 4096896 (16)
        Global_Variables.ADSSTATE_IDLE, UINT, 4096608 (16)
        Global_Variables.ADSSTATE_INCOMPATIBLE, UINT, 4096880 (16)
        Global_Variables.ADSSTATE_INIT, UINT, 4096640 (16)
        Global_Variables.ADSSTATE_INVALID, UINT, 4096592 (16)
        Global_Variables.ADSSTATE_LOADCFG, UINT, 4096720 (16)
        Global_Variables.ADSSTATE_MAXSTATES, UINT, 4096912 (16)
        Global_Variables.ADSSTATE_POWERFAILURE, UINT, 4096736 (16)
        Global_Variables.ADSSTATE_POWERGOOD, UINT, 4096752 (16)
        Global_Variables.ADSSTATE_RECONFIG, UINT, 4096848 (16)
        Global_Variables.ADSSTATE_RESET, UINT, 4096624 (16)
        Global_Variables.ADSSTATE_RESUME, UINT, 4096816 (16)
        Global_Variables.ADSSTATE_RUN, UINT, 4096672 (16)
        Global_Variables.ADSSTATE_SAVECFG, UINT, 4096704 (16)
        Global_Variables.ADSSTATE_SHUTDOWN, UINT, 4096784 (16)
        Global_Variables.ADSSTATE_START, UINT, 4096656 (16)
        Global_Variables.ADSSTATE_STOP, UINT, 4096688 (16)
        Global_Variables.ADSSTATE_STOPPING, UINT, 4096864 (16)
        Global_Variables.ADSSTATE_SUSPEND, UINT, 4096800 (16)
        Global_Variables.AMSLOGGER_IGR_GENERAL, UDINT, 4164608 (32)
        Global_Variables.AMSLOGGER_IOF_MODE, UDINT, 4164640 (32)
        Global_Variables.AMSPORT_AMSLOGGER, UINT, 4164672 (16)
        Global_Variables.AMSPORT_EVENTLOG, UINT, 4096304 (16)
        Global_Variables.AMSPORT_LOGGER, UINT, 4096288 (16)
        Global_Variables.AMSPORT_R0_CAM, UINT, 4096528 (16)
        Global_Variables.AMSPORT_R0_CAMTOOL, UINT, 4096544 (16)
        Global_Variables.AMSPORT_R0_CNC, UINT, 4096416 (16)
        Global_Variables.AMSPORT_R0_IO, UINT, 4096336 (16)
        Global_Variables.AMSPORT_R0_ISG, UINT, 4096400 (16)
        Global_Variables.AMSPORT_R0_LINE, UINT, 4096432 (16)
        Global_Variables.AMSPORT_R0_NC, UINT, 4096352 (16)
        Global_Variables.AMSPORT_R0_NCSAF, UINT, 4096368 (16)
        Global_Variables.AMSPORT_R0_NCSVB, UINT, 4096384 (16)
        Global_Variables.AMSPORT_R0_PLC, UINT, 4096448 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS1, UINT, 4096464 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS2, UINT, 4096480 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS3, UINT, 4096496 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS4, UINT, 4096512 (16)
        Global_Variables.AMSPORT_R0_RTIME, UINT, 4096320 (16)
        Global_Variables.AMSPORT_R3_SCOPESERVER, UINT, 4096576 (16)
        Global_Variables.AMSPORT_R3_SYSSERV, UINT, 4096560 (16)
        Global_Variables.AMSPORT_TCPIPSRV, UINT, 4301104 (16)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_INVALID, BYTE, 4098976 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_LOADED, BYTE, 4098968 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_INVALID, BYTE, 4098952 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_LOADED, BYTE, 4098944 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_REQUESTED, BYTE, 4098960 (8)
        Global_Variables.CONNECT_MODE_ENABLEDBG, DWORD, 4304864 (32)
        Global_Variables.DATE_AND_TIME_SECPERDAY, DWORD, 4177568 (32)
        Global_Variables.DATE_AND_TIME_SECPERWEEK, DWORD, 4177600 (32)
        Global_Variables.DBG_OUTPUT_FILE, DWORD, 4183872 (32)
        Global_Variables.DBG_OUTPUT_LOG, DWORD, 4183840 (32)
        Global_Variables.DBG_OUTPUT_NONE, DWORD, 4183808 (32)
        Global_Variables.DBG_OUTPUT_VISU, DWORD, 4183904 (32)
        Global_Variables.DEFAULT_ADS_TIMEOUT, TIME, 4099712 (32)
        Global_Variables.DEFAULT_CSV_FIELD_DOUBLE_QUOTE, BYTE, 4163352 (8)
        Global_Variables.DEFAULT_CSV_FIELD_SEP, BYTE, 4101376 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_CR, BYTE, 4300144 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_LF, BYTE, 4300152 (8)
        Global_Variables.EMPTY_ARG_VALUE, Tc2_Utilities.T_Arg, 4165248 (96)
        Global_Variables.EMPTY_GUID_REGSTRING, STRING(38), 4303272 (312)
        Global_Variables.EMPTY_GUID_STRING, STRING(36), 4302976 (296)
        Global_Variables.EMPTY_GUID_STRUCT, GUID, 4302848 (128)
        Global_Variables.EMPTY_ROUTE_ENTRY, Tc2_Utilities.ST_AmsRouteEntry, 4163360 (1184)
        Global_Variables.eWatchdogConfig, Tc2_System.E_WATCHDOG_TIME_CONFIG, 4099632 (16)
        Global_Variables.FLOATREC_EXP_IS_INF, INT, 4164720 (16)
        Global_Variables.FLOATREC_EXP_IS_NAN, INT, 4164704 (16)
        Global_Variables.FLOATREC_MAX_DIGITS, INT, 4164736 (16)
        Global_Variables.FLOATREC_MAX_PRECISION, INT, 4164752 (16)
        Global_Variables.FLOATREC_MIN_PRECISION, INT, 4164768 (16)
        Global_Variables.FMTERR_ARGTYPEINVALID, DWORD, 4165088 (32)
        Global_Variables.FMTERR_ASTERISKPOSITION, DWORD, 4164864 (32)
        Global_Variables.FMTERR_DESTBUFFOVERFLOW, DWORD, 4165184 (32)
        Global_Variables.FMTERR_FLAGPOSITION, DWORD, 4164960 (32)
        Global_Variables.FMTERR_INSUFFICIENTARGS, DWORD, 4165152 (32)
        Global_Variables.FMTERR_INVALIDPOINTERINPUT, DWORD, 4165216 (32)
        Global_Variables.FMTERR_NOERROR, DWORD, 4164800 (32)
        Global_Variables.FMTERR_PERCENTSIGNPOSITION, DWORD, 4164832 (32)
        Global_Variables.FMTERR_PRECISIONDOTPOSITION, DWORD, 4165024 (32)
        Global_Variables.FMTERR_PRECISIONVALUE, DWORD, 4164928 (32)
        Global_Variables.FMTERR_TYPEFIELDVALUE, DWORD, 4165056 (32)
        Global_Variables.FMTERR_UNACCEPTEDPARAMETER, DWORD, 4165120 (32)
        Global_Variables.FMTERR_WIDTHPRECISIONVALPOS, DWORD, 4164992 (32)
        Global_Variables.FMTERR_WIDTHVALUE, DWORD, 4164896 (32)
        Global_Variables.FOPEN_MODEAPPEND, DWORD, 4099072 (32)
        Global_Variables.FOPEN_MODEBINARY, DWORD, 4099136 (32)
        Global_Variables.FOPEN_MODEPLUS, DWORD, 4099104 (32)
        Global_Variables.FOPEN_MODEREAD, DWORD, 4099008 (32)
        Global_Variables.FOPEN_MODETEXT, DWORD, 4099168 (32)
        Global_Variables.FOPEN_MODEWRITE, DWORD, 4099040 (32)
        Global_Variables.FORMAT_DECASC_CODES, ARRAY[0..9] OF BYTE, 4165600 (80)
        Global_Variables.FORMAT_HEXASC_CODES, ARRAY[0..1] OF BYTE, 4165344 (256)
        Global_Variables.FORMAT_MAX_ARGS, INT, 4164688 (16)
        Global_Variables.GLOBAL_DCF77_PULSE_SPLIT, TIME, 4101344 (32)
        Global_Variables.GLOBAL_DCF77_SEQUENCE_CHECK, BOOL, 4101224 (8)
        Global_Variables.GLOBAL_FORMAT_HASH_PREFIX_TYPE, Tc2_Utilities.E_HashPrefixTypes, 4101312 (16)
        Global_Variables.GLOBAL_SBCS_TABLE, Tc2_Utilities.E_SBCSType, 4101328 (16)
        Global_Variables.HKEY_MAX_BINARY_DATA_SIZE, UDINT, 4164576 (32)
        Global_Variables.IPHELPERAPI_ADAPTERSINFO, UDINT, 4163040 (32)
        Global_Variables.IPHELPERAPI_IPADDRBYHOSTNAME, UDINT, 4163072 (32)
        Global_Variables.LISTEN_MODE_CLOSEALL, DWORD, 4304800 (32)
        Global_Variables.LISTEN_MODE_USEOPENED, DWORD, 4304832 (32)
        Global_Variables.MAX_ADAPTER_ADDRESS_LENGTH, UDINT, 4162944 (32)
        Global_Variables.MAX_ADAPTER_DESCRIPTION_LENGTH, UDINT, 4162912 (32)
        Global_Variables.MAX_ADAPTER_NAME_LENGTH, UDINT, 4162880 (32)
        Global_Variables.MAX_AVERAGE_MEASURES, INT, 4101232 (16)
        Global_Variables.MAX_LOCAL_ADAPTERS, UDINT, 4163104 (32)
        Global_Variables.MAX_REMOTE_PCS, INT, 4101392 (16)
        Global_Variables.MAX_ROUTE_ADDR_LEN, BYTE, 4163328 (8)
        Global_Variables.MAX_ROUTE_NAME_LEN, BYTE, 4101384 (8)
        Global_Variables.MAX_ROUTE_TRANSPORT, BYTE, 4163344 (8)
        Global_Variables.MAX_STRING_LENGTH, UDINT, 4099744 (32)
        Global_Variables.MAX_THROTTLE_MODE, DWORD, 4304896 (32)
        Global_Variables.MIN_ROUTE_TRANSPORT, BYTE, 4163336 (8)
        Global_Variables.nWatchdogTime, BYTE, 4099000 (8)
        Global_Variables.PI, LREAL, 4099648 (64)
        Global_Variables.ROUTE_FLAG_DYNAMIC, DWORD, 4163264 (32)
        Global_Variables.ROUTE_FLAG_NOOVERRIDE, DWORD, 4163296 (32)
        Global_Variables.ROUTE_FLAG_TEMPORARY, DWORD, 4163232 (32)
        Global_Variables.SYSTEMSERVICE_ADDREMOTE, UDINT, 4163136 (32)
        Global_Variables.SYSTEMSERVICE_CHANGENETID, UDINT, 4098528 (32)
        Global_Variables.SYSTEMSERVICE_CLOSEHANDLE, UDINT, 4097888 (32)
        Global_Variables.SYSTEMSERVICE_CREATEFILE, UDINT, 4097856 (32)
        Global_Variables.SYSTEMSERVICE_DELREMOTE, UDINT, 4163168 (32)
        Global_Variables.SYSTEMSERVICE_ENUMREMOTE, UDINT, 4163200 (32)
        Global_Variables.SYSTEMSERVICE_FCLOSE, UDINT, 4097952 (32)
        Global_Variables.SYSTEMSERVICE_FDELETE, UDINT, 4098272 (32)
        Global_Variables.SYSTEMSERVICE_FEOF, UDINT, 4098240 (32)
        Global_Variables.SYSTEMSERVICE_FFILEFIND, UDINT, 4164544 (32)
        Global_Variables.SYSTEMSERVICE_FGETS, UDINT, 4098112 (32)
        Global_Variables.SYSTEMSERVICE_FOPEN, UDINT, 4097920 (32)
        Global_Variables.SYSTEMSERVICE_FPRINTF, UDINT, 4098208 (32)
        Global_Variables.SYSTEMSERVICE_FPUTS, UDINT, 4098144 (32)
        Global_Variables.SYSTEMSERVICE_FREAD, UDINT, 4097984 (32)
        Global_Variables.SYSTEMSERVICE_FRENAME, UDINT, 4098304 (32)
        Global_Variables.SYSTEMSERVICE_FSCANF, UDINT, 4098176 (32)
        Global_Variables.SYSTEMSERVICE_FSEEK, UDINT, 4098048 (32)
        Global_Variables.SYSTEMSERVICE_FTELL, UDINT, 4098080 (32)
        Global_Variables.SYSTEMSERVICE_FWRITE, UDINT, 4098016 (32)
        Global_Variables.SYSTEMSERVICE_IPHELPERAPI, UDINT, 4162976 (32)
        Global_Variables.SYSTEMSERVICE_IPHOSTNAME, UDINT, 4163008 (32)
        Global_Variables.SYSTEMSERVICE_MKDIR, UDINT, 4098336 (32)
        Global_Variables.SYSTEMSERVICE_OPENCREATE, UDINT, 4097760 (32)
        Global_Variables.SYSTEMSERVICE_OPENREAD, UDINT, 4097792 (32)
        Global_Variables.SYSTEMSERVICE_OPENWRITE, UDINT, 4097824 (32)
        Global_Variables.SYSTEMSERVICE_REG_HKEYLOCALMACHINE, UDINT, 4098400 (32)
        Global_Variables.SYSTEMSERVICE_RMDIR, UDINT, 4098368 (32)
        Global_Variables.SYSTEMSERVICE_SENDEMAIL, UDINT, 4098432 (32)
        Global_Variables.SYSTEMSERVICE_STARTPROCESS, UDINT, 4098496 (32)
        Global_Variables.SYSTEMSERVICE_TIMESERVICES, UDINT, 4098464 (32)
        Global_Variables.SYSTEMSTATEFLAGS_BSOD, BYTE, 4098984 (8)
        Global_Variables.SYSTEMSTATEFLAGS_RTVIOLATION, BYTE, 4098992 (8)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX, Tc2_Utilities.T_ULARGE_INTEGER, 4172224 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX64, ULINT, 4172544 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN, Tc2_Utilities.T_ULARGE_INTEGER, 4172160 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN64, ULINT, 4172480 (64)
        Global_Variables.SYSTEMTIME_DATEDELTA_OFFSET, DWORD, 4171936 (32)
        Global_Variables.SYSTEMTIME_MAX_MONTHDAYS, ARRAY[0..1] OF WORD, 4171088 (384)
        Global_Variables.SYSTEMTIME_MAX_YEARSDAY, ARRAY[0..1] OF WORD, 4171472 (448)
        Global_Variables.SYSTEMTIME_TICKSPERDAY, Tc2_Utilities.T_ULARGE_INTEGER, 4172096 (64)
        Global_Variables.SYSTEMTIME_TICKSPERDAY64, ULINT, 4172416 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC, Tc2_Utilities.T_ULARGE_INTEGER, 4171968 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC64, ULINT, 4172288 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC, Tc2_Utilities.T_ULARGE_INTEGER, 4172032 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC64, ULINT, 4172352 (64)
        Global_Variables.TCEVENT_FMTPRGSIZE, INT, 4099616 (16)
        Global_Variables.TCEVENT_SRCNAMESIZE, INT, 4099600 (16)
        Global_Variables.TCEVENTFLAG_AUTOFMTALL, WORD, 4099504 (16)
        Global_Variables.TCEVENTFLAG_FMTSELF, WORD, 4099440 (16)
        Global_Variables.TCEVENTFLAG_LOG, WORD, 4099456 (16)
        Global_Variables.TCEVENTFLAG_MSGBOX, WORD, 4099472 (16)
        Global_Variables.TCEVENTFLAG_PRIOCLASS, WORD, 4099424 (16)
        Global_Variables.TCEVENTFLAG_SRCID, WORD, 4099488 (16)
        Global_Variables.TCEVENTSTATE_CONFIRMED, WORD, 4099568 (16)
        Global_Variables.TCEVENTSTATE_INVALID, WORD, 4099520 (16)
        Global_Variables.TCEVENTSTATE_RESET, WORD, 4099552 (16)
        Global_Variables.TCEVENTSTATE_RESETCON, WORD, 4099584 (16)
        Global_Variables.TCEVENTSTATE_SIGNALED, WORD, 4099536 (16)
        Global_Variables.TCPADS_IGR_ADAPTER_LINKSTATUS, UDINT, 4304192 (32)
        Global_Variables.TCPADS_IGR_CLOSEBYHDL, UDINT, 4303936 (32)
        Global_Variables.TCPADS_IGR_CONLIST, UDINT, 4303904 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_ADDBYHDL, UDINT, 4304128 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_DROPBYHDL, UDINT, 4304160 (32)
        Global_Variables.TCPADS_IGR_PEERBYHDL, UDINT, 4304000 (32)
        Global_Variables.TCPADS_IGR_RECVBYHDL, UDINT, 4304032 (32)
        Global_Variables.TCPADS_IGR_RECVFROMBYHDL, UDINT, 4304064 (32)
        Global_Variables.TCPADS_IGR_SENDBYHDL, UDINT, 4303968 (32)
        Global_Variables.TCPADS_IGR_SENDTOBYHDL, UDINT, 4304096 (32)
        Global_Variables.TCPADS_NULL_HSOCKET, Tc2_TcpIp.T_HSOCKET, 4304448 (352)
        Global_Variables.TCPADSCONLST_IOF_ACCEPT, UDINT, 4304320 (32)
        Global_Variables.TCPADSCONLST_IOF_CLOSEALL, UDINT, 4304288 (32)
        Global_Variables.TCPADSCONLST_IOF_CONNECT, UDINT, 4304224 (32)
        Global_Variables.TCPADSCONLST_IOF_GETHNDLBYADDR, UDINT, 4304384 (32)
        Global_Variables.TCPADSCONLST_IOF_GETLINKSTATUS, UDINT, 4304416 (32)
        Global_Variables.TCPADSCONLST_IOF_LISTEN, UDINT, 4304256 (32)
        Global_Variables.TCPADSCONLST_IOF_UDPBIND, UDINT, 4304352 (32)
        Global_Variables.THROTTLE_MODE_DEFAULT, Tc2_TcpIp.T_ThrottleTimes, 4305344 (416)
        Global_Variables.THROTTLE_MODE_OFF, Tc2_TcpIp.T_ThrottleTimes, 4304928 (416)
        Global_Variables.TIMESERVICE_ADJUSTTIMETORTC, UDINT, 4098656 (32)
        Global_Variables.TIMESERVICE_DATEANDTIME, UDINT, 4098560 (32)
        Global_Variables.TIMESERVICE_RTCTIMEDIFF, UDINT, 4098624 (32)
        Global_Variables.TIMESERVICE_SYSTEMTIMES, UDINT, 4098592 (32)
        Global_Variables.TIMESERVICE_TIMEZONINFORMATION, UDINT, 4098688 (32)
        Global_Variables.WEST_EUROPE_TZI, Tc2_Utilities.ST_TimeZoneInformation, 4172608 (864)

.. raw:: html

   </details>
   <br />


Global_Variables_EtherCAT
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Variables_EtherCAT.ESC_MAX_PORTS, UINT, 27202368 (16)
        Global_Variables_EtherCAT.iSLAVEADDR_ARR_SIZE, UINT, 27202032 (16)


Global_Version
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Version.stLibVersion_Tc2_ModbusSrv, ST_LibVersion, 4303584 (288)
        Global_Version.stLibVersion_Tc2_System, ST_LibVersion, 4096000 (288)
        Global_Version.stLibVersion_Tc2_Utilities, ST_LibVersion, 4100896 (288)
        Global_Version.stLibVersion_Tc3_EventLogger, ST_LibVersion, 4306176 (288)
        Global_Version.stLibVersion_Tc3_JsonXml, ST_LibVersion, 4306592 (288)
        Global_Version.stLibVersion_Tc3_Module, ST_LibVersion, 4100288 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 8454432 (288)


ParameterList
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        ParameterList.cSourceNameSize, UDINT, 4306144 (32)


RUN_TESTS
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        RUN_TESTS.CbTest, FB_CircuitBreaker_Test, 39039848 (18801984)


TC_EVENTS
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENTS.LCLSGeneralEventClass, ST_LCLSGeneralEventClass, 27333984 (960)


TC_EVENT_CLASSES
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENT_CLASSES.LCLSGeneralEventClass, GUID, 27303904 (128)
        TC_EVENT_CLASSES.TcGeneralAdsEventClass, GUID, 27303392 (128)
        TC_EVENT_CLASSES.TcRouterEventClass, GUID, 27303520 (128)
        TC_EVENT_CLASSES.TcRTimeEventClass, GUID, 27303648 (128)
        TC_EVENT_CLASSES.TcSystemEventClass, GUID, 27303264 (128)
        TC_EVENT_CLASSES.Win32EventClass, GUID, 27303776 (128)


TwinCAT_LicenseInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_LicenseInfoVarList._LicenseInfo, ARRAY[1..1] OF PlcLicenseInfo, 27285728 (1024)


TwinCAT_SystemInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_SystemInfoVarList.__Task_3, _Implicit_Task_Info, 27289888 (704)
        TwinCAT_SystemInfoVarList._AppInfo, PlcAppSystemInfo, 27286752 (2048)
        TwinCAT_SystemInfoVarList._TaskInfo, ARRAY[1..1] OF PlcTaskSystemInfo, 27288832 (1024)
        TwinCAT_SystemInfoVarList._TaskOid_Task_3, OTCID, 27289856 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_Task_3, OTCID, 27288800 (32)


