v2.6.0/_sources/LCLSGeneral_LCLSGeneral_summary.rst.txt

Settings
--------

.. list-table::
    :header-rows: 1
    :align: center

    * - Setting
      - Value
      - Description
    * - AMS Net ID
      - 172.21.148.145.1.1
      -
    * - Target IP address
      - 172.21.148.145
      - Based on AMS Net ID by convention
    * - AMS Port
      - 851
      -

.. _LCLSGeneral_pragmas:

Pragmas
-------

Total pragmas found: 107
Total linter errors: 0



Libraries
---------

.. csv-table::
    :header: Library, Vendor, Default, Version
    :align: center

        Tc2_EtherCAT, Beckhoff Automation GmbH, Unset, Unset
        Tc2_IoFunctions, Beckhoff Automation GmbH, Unset, Unset
        Tc2_ModbusSrv, Beckhoff Automation GmbH, Unset, Unset
        Tc2_SerialCom, Beckhoff Automation GmbH, Unset, Unset
        Tc2_Standard, Beckhoff Automation GmbH, Unset, Unset
        Tc2_System, Beckhoff Automation GmbH, Unset, Unset
        Tc2_TcpIp, Beckhoff Automation GmbH, Unset, Unset
        Tc2_Utilities, Beckhoff Automation GmbH, Unset, Unset
        Tc3_EventLogger, Beckhoff Automation GmbH, Unset, Unset
        Tc3_JsonXml, Beckhoff Automation GmbH, Unset, Unset
        Tc3_Module, Beckhoff Automation GmbH, Unset, Unset
        TcUnit, www.tcunit.org, Unset, Unset

Symbols
-------





.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        .TCPADS_MAXUDP_BUFFSIZE, UDINT, 4305856 (32)


Constants
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Constants.bFPUSupport, BOOL, 674190488 (8)
        Constants.bLittleEndian, BOOL, 674190424 (8)
        Constants.bSimulationMode, BOOL, 674190480 (8)
        Constants.CompilerVersion, VERSION, 674273024 (64)
        Constants.CompilerVersionNumeric, DWORD, 674273152 (32)
        Constants.nPackMode, UINT, 674273088 (16)
        Constants.nRegisterSize, WORD, 674191248 (16)
        Constants.RuntimeVersion, VERSION, 674272960 (64)
        Constants.RuntimeVersionNumeric, DWORD, 674273120 (32)


DefaultGlobals
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        DefaultGlobals.fTimeStamp, LREAL, 674190144 (64)
        DefaultGlobals.stSys, ST_System, 674190048 (88)
        DefaultGlobals.stSys.I_EcatMaster1, AMSNETID, 674190088 (48)


Global_Constants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Constants.EMPTY_EVENT_CLASS, GUID, 4304992 (128)
        Global_Constants.EMPTY_EVENT_ID, UDINT, 4305120 (32)
        Global_Constants.EMPTY_SEVERITY, TcEventSeverity, 4305152 (16)
        Global_Constants.SUCCESS_EVENT, TcEventEntry, 4305184 (192)


Global_Variables
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>239 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Variables.ADSIGRP_DEVICE_DATA, UDINT, 4098240 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARI, UDINT, 4098144 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARO, UDINT, 4098176 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RISIZE, UDINT, 4098016 (32)
        Global_Variables.ADSIGRP_IOIMAGE_ROSIZE, UDINT, 4098112 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIB, UDINT, 4097952 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIOB, UDINT, 4098208 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIX, UDINT, 4097984 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOB, UDINT, 4098048 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOX, UDINT, 4098080 (32)
        Global_Variables.ADSIGRP_SYM_DOWNLOAD, UDINT, 4097824 (32)
        Global_Variables.ADSIGRP_SYM_HNDBYNAME, UDINT, 4097600 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAME, UDINT, 4097728 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAMEEX, UDINT, 4097792 (32)
        Global_Variables.ADSIGRP_SYM_RELEASEHND, UDINT, 4097696 (32)
        Global_Variables.ADSIGRP_SYM_UPLOAD, UDINT, 4097856 (32)
        Global_Variables.ADSIGRP_SYM_UPLOADINFO, UDINT, 4097888 (32)
        Global_Variables.ADSIGRP_SYM_VALBYHND, UDINT, 4097664 (32)
        Global_Variables.ADSIGRP_SYM_VALBYNAME, UDINT, 4097632 (32)
        Global_Variables.ADSIGRP_SYM_VERSION, UDINT, 4097760 (32)
        Global_Variables.ADSIGRP_SYMNAME, UDINT, 4097536 (32)
        Global_Variables.ADSIGRP_SYMNOTE, UDINT, 4097920 (32)
        Global_Variables.ADSIGRP_SYMTAB, UDINT, 4097504 (32)
        Global_Variables.ADSIGRP_SYMVAL, UDINT, 4097568 (32)
        Global_Variables.ADSIOFFS_DEVDATA_ADSSTATE, UDINT, 4098272 (32)
        Global_Variables.ADSIOFFS_DEVDATA_DEVSTATE, UDINT, 4098304 (32)
        Global_Variables.ADSLOG_MSGTYPE_ERROR, DWORD, 4099360 (32)
        Global_Variables.ADSLOG_MSGTYPE_HINT, DWORD, 4099296 (32)
        Global_Variables.ADSLOG_MSGTYPE_LOG, DWORD, 4099392 (32)
        Global_Variables.ADSLOG_MSGTYPE_MSGBOX, DWORD, 4099424 (32)
        Global_Variables.ADSLOG_MSGTYPE_RESOURCE, DWORD, 4099456 (32)
        Global_Variables.ADSLOG_MSGTYPE_STRING, DWORD, 4099488 (32)
        Global_Variables.ADSLOG_MSGTYPE_WARN, DWORD, 4099328 (32)
        Global_Variables.ADSSTATE_CONFIG, UINT, 4097408 (16)
        Global_Variables.ADSSTATE_ERROR, UINT, 4097344 (16)
        Global_Variables.ADSSTATE_EXCEPTION, UINT, 4097472 (16)
        Global_Variables.ADSSTATE_IDLE, UINT, 4097184 (16)
        Global_Variables.ADSSTATE_INCOMPATIBLE, UINT, 4097456 (16)
        Global_Variables.ADSSTATE_INIT, UINT, 4097216 (16)
        Global_Variables.ADSSTATE_INVALID, UINT, 4097168 (16)
        Global_Variables.ADSSTATE_LOADCFG, UINT, 4097296 (16)
        Global_Variables.ADSSTATE_MAXSTATES, UINT, 4097488 (16)
        Global_Variables.ADSSTATE_POWERFAILURE, UINT, 4097312 (16)
        Global_Variables.ADSSTATE_POWERGOOD, UINT, 4097328 (16)
        Global_Variables.ADSSTATE_RECONFIG, UINT, 4097424 (16)
        Global_Variables.ADSSTATE_RESET, UINT, 4097200 (16)
        Global_Variables.ADSSTATE_RESUME, UINT, 4097392 (16)
        Global_Variables.ADSSTATE_RUN, UINT, 4097248 (16)
        Global_Variables.ADSSTATE_SAVECFG, UINT, 4097280 (16)
        Global_Variables.ADSSTATE_SHUTDOWN, UINT, 4097360 (16)
        Global_Variables.ADSSTATE_START, UINT, 4097232 (16)
        Global_Variables.ADSSTATE_STOP, UINT, 4097264 (16)
        Global_Variables.ADSSTATE_STOPPING, UINT, 4097440 (16)
        Global_Variables.ADSSTATE_SUSPEND, UINT, 4097376 (16)
        Global_Variables.AMSLOGGER_IGR_GENERAL, UDINT, 4165088 (32)
        Global_Variables.AMSLOGGER_IOF_MODE, UDINT, 4165120 (32)
        Global_Variables.AMSPORT_AMSLOGGER, UINT, 4163824 (16)
        Global_Variables.AMSPORT_EVENTLOG, UINT, 4096880 (16)
        Global_Variables.AMSPORT_LOGGER, UINT, 4096864 (16)
        Global_Variables.AMSPORT_R0_CAM, UINT, 4097104 (16)
        Global_Variables.AMSPORT_R0_CAMTOOL, UINT, 4097120 (16)
        Global_Variables.AMSPORT_R0_CNC, UINT, 4096992 (16)
        Global_Variables.AMSPORT_R0_IO, UINT, 4096912 (16)
        Global_Variables.AMSPORT_R0_ISG, UINT, 4096976 (16)
        Global_Variables.AMSPORT_R0_LINE, UINT, 4097008 (16)
        Global_Variables.AMSPORT_R0_NC, UINT, 4096928 (16)
        Global_Variables.AMSPORT_R0_NCSAF, UINT, 4096944 (16)
        Global_Variables.AMSPORT_R0_NCSVB, UINT, 4096960 (16)
        Global_Variables.AMSPORT_R0_PLC, UINT, 4097024 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS1, UINT, 4097040 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS2, UINT, 4097056 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS3, UINT, 4097072 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS4, UINT, 4097088 (16)
        Global_Variables.AMSPORT_R0_RTIME, UINT, 4096896 (16)
        Global_Variables.AMSPORT_R3_SCOPESERVER, UINT, 4097152 (16)
        Global_Variables.AMSPORT_R3_SYSSERV, UINT, 4097136 (16)
        Global_Variables.AMSPORT_TCPIPSRV, UINT, 4305168 (16)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_INVALID, BYTE, 4099552 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_LOADED, BYTE, 4099544 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_INVALID, BYTE, 4099528 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_LOADED, BYTE, 4099520 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_REQUESTED, BYTE, 4099536 (8)
        Global_Variables.CONNECT_MODE_ENABLEDBG, DWORD, 4306848 (32)
        Global_Variables.DATE_AND_TIME_SECPERDAY, DWORD, 4178048 (32)
        Global_Variables.DATE_AND_TIME_SECPERWEEK, DWORD, 4178080 (32)
        Global_Variables.DBG_OUTPUT_FILE, DWORD, 4184352 (32)
        Global_Variables.DBG_OUTPUT_LOG, DWORD, 4184320 (32)
        Global_Variables.DBG_OUTPUT_NONE, DWORD, 4184288 (32)
        Global_Variables.DBG_OUTPUT_VISU, DWORD, 4184384 (32)
        Global_Variables.DEFAULT_ADS_TIMEOUT, TIME, 4100288 (32)
        Global_Variables.DEFAULT_CSV_FIELD_DOUBLE_QUOTE, BYTE, 4301552 (8)
        Global_Variables.DEFAULT_CSV_FIELD_SEP, BYTE, 4101816 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_CR, BYTE, 4301560 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_LF, BYTE, 4301568 (8)
        Global_Variables.EMPTY_ARG_VALUE, T_Arg, 4165696 (96)
        Global_Variables.EMPTY_GUID_REGSTRING, STRING(38), 4303752 (312)
        Global_Variables.EMPTY_GUID_STRING, STRING(36), 4303456 (296)
        Global_Variables.EMPTY_GUID_STRUCT, GUID, 4303328 (128)
        Global_Variables.EMPTY_ROUTE_ENTRY, ST_AmsRouteEntry, 4163840 (1184)
        Global_Variables.eWatchdogConfig, E_WATCHDOG_TIME_CONFIG, 4100208 (16)
        Global_Variables.FLOATREC_EXP_IS_INF, INT, 4165184 (16)
        Global_Variables.FLOATREC_EXP_IS_NAN, INT, 4165168 (16)
        Global_Variables.FLOATREC_MAX_DIGITS, INT, 4165200 (16)
        Global_Variables.FLOATREC_MAX_PRECISION, INT, 4165216 (16)
        Global_Variables.FLOATREC_MIN_PRECISION, INT, 4165232 (16)
        Global_Variables.FMTERR_ARGTYPEINVALID, DWORD, 4165536 (32)
        Global_Variables.FMTERR_ASTERISKPOSITION, DWORD, 4165312 (32)
        Global_Variables.FMTERR_DESTBUFFOVERFLOW, DWORD, 4165632 (32)
        Global_Variables.FMTERR_FLAGPOSITION, DWORD, 4165408 (32)
        Global_Variables.FMTERR_INSUFFICIENTARGS, DWORD, 4165600 (32)
        Global_Variables.FMTERR_INVALIDPOINTERINPUT, DWORD, 4165664 (32)
        Global_Variables.FMTERR_NOERROR, DWORD, 4165248 (32)
        Global_Variables.FMTERR_PERCENTSIGNPOSITION, DWORD, 4165280 (32)
        Global_Variables.FMTERR_PRECISIONDOTPOSITION, DWORD, 4165472 (32)
        Global_Variables.FMTERR_PRECISIONVALUE, DWORD, 4165376 (32)
        Global_Variables.FMTERR_TYPEFIELDVALUE, DWORD, 4165504 (32)
        Global_Variables.FMTERR_UNACCEPTEDPARAMETER, DWORD, 4165568 (32)
        Global_Variables.FMTERR_WIDTHPRECISIONVALPOS, DWORD, 4165440 (32)
        Global_Variables.FMTERR_WIDTHVALUE, DWORD, 4165344 (32)
        Global_Variables.FOPEN_MODEAPPEND, DWORD, 4099648 (32)
        Global_Variables.FOPEN_MODEBINARY, DWORD, 4099712 (32)
        Global_Variables.FOPEN_MODEPLUS, DWORD, 4099680 (32)
        Global_Variables.FOPEN_MODEREAD, DWORD, 4099584 (32)
        Global_Variables.FOPEN_MODETEXT, DWORD, 4099744 (32)
        Global_Variables.FOPEN_MODEWRITE, DWORD, 4099616 (32)
        Global_Variables.FORMAT_DECASC_CODES, BYTE, 4166048 (80)
        Global_Variables.FORMAT_HEXASC_CODES, BYTE, 4165792 (256)
        Global_Variables.FORMAT_MAX_ARGS, INT, 4165152 (16)
        Global_Variables.GLOBAL_DCF77_PULSE_SPLIT, TIME, 4101824 (32)
        Global_Variables.GLOBAL_DCF77_SEQUENCE_CHECK, BOOL, 4101808 (8)
        Global_Variables.GLOBAL_FORMAT_HASH_PREFIX_TYPE, E_HashPrefixTypes, 4101776 (16)
        Global_Variables.GLOBAL_SBCS_TABLE, E_SBCSType, 4101792 (16)
        Global_Variables.HKEY_MAX_BINARY_DATA_SIZE, UDINT, 4165056 (32)
        Global_Variables.IPHELPERAPI_ADAPTERSINFO, UDINT, 4163488 (32)
        Global_Variables.IPHELPERAPI_IPADDRBYHOSTNAME, UDINT, 4163520 (32)
        Global_Variables.LISTEN_MODE_CLOSEALL, DWORD, 4306784 (32)
        Global_Variables.LISTEN_MODE_USEOPENED, DWORD, 4306816 (32)
        Global_Variables.MAX_ADAPTER_ADDRESS_LENGTH, UDINT, 4163392 (32)
        Global_Variables.MAX_ADAPTER_DESCRIPTION_LENGTH, UDINT, 4163360 (32)
        Global_Variables.MAX_ADAPTER_NAME_LENGTH, UDINT, 4163328 (32)
        Global_Variables.MAX_AVERAGE_MEASURES, INT, 4101760 (16)
        Global_Variables.MAX_LOCAL_ADAPTERS, UDINT, 4163552 (32)
        Global_Variables.MAX_REMOTE_PCS, INT, 4163680 (16)
        Global_Variables.MAX_ROUTE_ADDR_LEN, BYTE, 4163704 (8)
        Global_Variables.MAX_ROUTE_NAME_LEN, BYTE, 4163696 (8)
        Global_Variables.MAX_ROUTE_TRANSPORT, BYTE, 4163816 (8)
        Global_Variables.MAX_STRING_LENGTH, UDINT, 4100320 (32)
        Global_Variables.MAX_THROTTLE_MODE, DWORD, 4306880 (32)
        Global_Variables.MIN_ROUTE_TRANSPORT, BYTE, 4163808 (8)
        Global_Variables.nWatchdogTime, BYTE, 4099576 (8)
        Global_Variables.PI, LREAL, 4100224 (64)
        Global_Variables.ROUTE_FLAG_DYNAMIC, DWORD, 4163744 (32)
        Global_Variables.ROUTE_FLAG_NOOVERRIDE, DWORD, 4163776 (32)
        Global_Variables.ROUTE_FLAG_TEMPORARY, DWORD, 4163712 (32)
        Global_Variables.SYSTEMSERVICE_ADDREMOTE, UDINT, 4163584 (32)
        Global_Variables.SYSTEMSERVICE_CHANGENETID, UDINT, 4099104 (32)
        Global_Variables.SYSTEMSERVICE_CLOSEHANDLE, UDINT, 4098464 (32)
        Global_Variables.SYSTEMSERVICE_CREATEFILE, UDINT, 4098432 (32)
        Global_Variables.SYSTEMSERVICE_DELREMOTE, UDINT, 4163616 (32)
        Global_Variables.SYSTEMSERVICE_ENUMREMOTE, UDINT, 4163648 (32)
        Global_Variables.SYSTEMSERVICE_FCLOSE, UDINT, 4098528 (32)
        Global_Variables.SYSTEMSERVICE_FDELETE, UDINT, 4098848 (32)
        Global_Variables.SYSTEMSERVICE_FEOF, UDINT, 4098816 (32)
        Global_Variables.SYSTEMSERVICE_FFILEFIND, UDINT, 4165024 (32)
        Global_Variables.SYSTEMSERVICE_FGETS, UDINT, 4098688 (32)
        Global_Variables.SYSTEMSERVICE_FOPEN, UDINT, 4098496 (32)
        Global_Variables.SYSTEMSERVICE_FPRINTF, UDINT, 4098784 (32)
        Global_Variables.SYSTEMSERVICE_FPUTS, UDINT, 4098720 (32)
        Global_Variables.SYSTEMSERVICE_FREAD, UDINT, 4098560 (32)
        Global_Variables.SYSTEMSERVICE_FRENAME, UDINT, 4098880 (32)
        Global_Variables.SYSTEMSERVICE_FSCANF, UDINT, 4098752 (32)
        Global_Variables.SYSTEMSERVICE_FSEEK, UDINT, 4098624 (32)
        Global_Variables.SYSTEMSERVICE_FTELL, UDINT, 4098656 (32)
        Global_Variables.SYSTEMSERVICE_FWRITE, UDINT, 4098592 (32)
        Global_Variables.SYSTEMSERVICE_IPHELPERAPI, UDINT, 4163424 (32)
        Global_Variables.SYSTEMSERVICE_IPHOSTNAME, UDINT, 4163456 (32)
        Global_Variables.SYSTEMSERVICE_MKDIR, UDINT, 4098912 (32)
        Global_Variables.SYSTEMSERVICE_OPENCREATE, UDINT, 4098336 (32)
        Global_Variables.SYSTEMSERVICE_OPENREAD, UDINT, 4098368 (32)
        Global_Variables.SYSTEMSERVICE_OPENWRITE, UDINT, 4098400 (32)
        Global_Variables.SYSTEMSERVICE_REG_HKEYLOCALMACHINE, UDINT, 4098976 (32)
        Global_Variables.SYSTEMSERVICE_RMDIR, UDINT, 4098944 (32)
        Global_Variables.SYSTEMSERVICE_SENDEMAIL, UDINT, 4099008 (32)
        Global_Variables.SYSTEMSERVICE_STARTPROCESS, UDINT, 4099072 (32)
        Global_Variables.SYSTEMSERVICE_TIMESERVICES, UDINT, 4099040 (32)
        Global_Variables.SYSTEMSTATEFLAGS_BSOD, BYTE, 4099560 (8)
        Global_Variables.SYSTEMSTATEFLAGS_RTVIOLATION, BYTE, 4099568 (8)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX, T_ULARGE_INTEGER, 4172672 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX64, ULINT, 4172992 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN, T_ULARGE_INTEGER, 4172608 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN64, ULINT, 4172928 (64)
        Global_Variables.SYSTEMTIME_DATEDELTA_OFFSET, DWORD, 4172384 (32)
        Global_Variables.SYSTEMTIME_MAX_MONTHDAYS, WORD, 4171536 (384)
        Global_Variables.SYSTEMTIME_MAX_YEARSDAY, WORD, 4171920 (448)
        Global_Variables.SYSTEMTIME_TICKSPERDAY, T_ULARGE_INTEGER, 4172544 (64)
        Global_Variables.SYSTEMTIME_TICKSPERDAY64, ULINT, 4172864 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC, T_ULARGE_INTEGER, 4172416 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC64, ULINT, 4172736 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC, T_ULARGE_INTEGER, 4172480 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC64, ULINT, 4172800 (64)
        Global_Variables.TCEVENT_FMTPRGSIZE, INT, 4100192 (16)
        Global_Variables.TCEVENT_SRCNAMESIZE, INT, 4100176 (16)
        Global_Variables.TCEVENTFLAG_AUTOFMTALL, WORD, 4100080 (16)
        Global_Variables.TCEVENTFLAG_FMTSELF, WORD, 4100016 (16)
        Global_Variables.TCEVENTFLAG_LOG, WORD, 4100032 (16)
        Global_Variables.TCEVENTFLAG_MSGBOX, WORD, 4100048 (16)
        Global_Variables.TCEVENTFLAG_PRIOCLASS, WORD, 4100000 (16)
        Global_Variables.TCEVENTFLAG_SRCID, WORD, 4100064 (16)
        Global_Variables.TCEVENTSTATE_CONFIRMED, WORD, 4100144 (16)
        Global_Variables.TCEVENTSTATE_INVALID, WORD, 4100096 (16)
        Global_Variables.TCEVENTSTATE_RESET, WORD, 4100128 (16)
        Global_Variables.TCEVENTSTATE_RESETCON, WORD, 4100160 (16)
        Global_Variables.TCEVENTSTATE_SIGNALED, WORD, 4100112 (16)
        Global_Variables.TCPADS_IGR_ADAPTER_LINKSTATUS, UDINT, 4306176 (32)
        Global_Variables.TCPADS_IGR_CLOSEBYHDL, UDINT, 4305920 (32)
        Global_Variables.TCPADS_IGR_CONLIST, UDINT, 4305888 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_ADDBYHDL, UDINT, 4306112 (32)
        Global_Variables.TCPADS_IGR_MULTICAST_DROPBYHDL, UDINT, 4306144 (32)
        Global_Variables.TCPADS_IGR_PEERBYHDL, UDINT, 4305984 (32)
        Global_Variables.TCPADS_IGR_RECVBYHDL, UDINT, 4306016 (32)
        Global_Variables.TCPADS_IGR_RECVFROMBYHDL, UDINT, 4306048 (32)
        Global_Variables.TCPADS_IGR_SENDBYHDL, UDINT, 4305952 (32)
        Global_Variables.TCPADS_IGR_SENDTOBYHDL, UDINT, 4306080 (32)
        Global_Variables.TCPADS_NULL_HSOCKET, T_HSOCKET, 4306432 (352)
        Global_Variables.TCPADSCONLST_IOF_ACCEPT, UDINT, 4306304 (32)
        Global_Variables.TCPADSCONLST_IOF_CLOSEALL, UDINT, 4306272 (32)
        Global_Variables.TCPADSCONLST_IOF_CONNECT, UDINT, 4306208 (32)
        Global_Variables.TCPADSCONLST_IOF_GETHNDLBYADDR, UDINT, 4306368 (32)
        Global_Variables.TCPADSCONLST_IOF_GETLINKSTATUS, UDINT, 4306400 (32)
        Global_Variables.TCPADSCONLST_IOF_LISTEN, UDINT, 4306240 (32)
        Global_Variables.TCPADSCONLST_IOF_UDPBIND, UDINT, 4306336 (32)
        Global_Variables.THROTTLE_MODE_DEFAULT, T_ThrottleTimes, 4307328 (416)
        Global_Variables.THROTTLE_MODE_OFF, T_ThrottleTimes, 4306912 (416)
        Global_Variables.TIMESERVICE_ADJUSTTIMETORTC, UDINT, 4099232 (32)
        Global_Variables.TIMESERVICE_DATEANDTIME, UDINT, 4099136 (32)
        Global_Variables.TIMESERVICE_RTCTIMEDIFF, UDINT, 4099200 (32)
        Global_Variables.TIMESERVICE_SYSTEMTIMES, UDINT, 4099168 (32)
        Global_Variables.TIMESERVICE_TIMEZONINFORMATION, UDINT, 4099264 (32)
        Global_Variables.WEST_EUROPE_TZI, ST_TimeZoneInformation, 4173056 (864)

.. raw:: html

   </details>
   <br />


Global_Variables_EtherCAT
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Variables_EtherCAT.ESC_MAX_PORTS, UINT, 674190208 (16)
        Global_Variables_EtherCAT.iSLAVEADDR_ARR_SIZE, UINT, 634519664 (16)


Global_Version
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>11 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Version.stLibVersion_Tc2_EtherCAT, ST_LibVersion, 4096000 (288)
        Global_Version.stLibVersion_Tc2_IoFunctions, ST_LibVersion, 4304128 (288)
        Global_Version.stLibVersion_Tc2_ModbusSrv, ST_LibVersion, 4304416 (288)
        Global_Version.stLibVersion_Tc2_SerialCom, ST_LibVersion, 4304704 (288)
        Global_Version.stLibVersion_Tc2_Standard, ST_LibVersion, 4096288 (288)
        Global_Version.stLibVersion_Tc2_System, ST_LibVersion, 4096576 (288)
        Global_Version.stLibVersion_Tc2_Utilities, ST_LibVersion, 4101472 (288)
        Global_Version.stLibVersion_Tc3_EventLogger, ST_LibVersion, 4305440 (288)
        Global_Version.stLibVersion_Tc3_JsonXml, ST_LibVersion, 4307744 (288)
        Global_Version.stLibVersion_Tc3_Module, ST_LibVersion, 4100864 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 634492128 (288)

.. raw:: html

   </details>
   <br />


GVL
^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL.nLangId_OnlineMonitoring, DINT, 4305376 (32)


GVL_INTERNAL
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_INTERNAL.UNINITIALIZED_CLASS_GUID, GUID, 4305728 (128)


GVL_Logger
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Logger.bTrickleTripped, BOOL, 634519656 (8)
        GVL_Logger.cLogHost, STRING(15), 674190224 (128)
        GVL_Logger.fbRootLogger, FB_LogMessage, 674191296 (81600)
        GVL_Logger.iLogPort, UINT, 674190352 (16)
        GVL_Logger.nGlobAccEvents, UDINT, 674272896 (32)
        GVL_Logger.nLocalTrickleTripThreshold, TIME, 674190496 (32)
        GVL_Logger.nLocalTripThreshold, TIME, 674190432 (32)
        GVL_Logger.nMinTimeViolationAcceptable, INT, 674190464 (16)
        GVL_Logger.nTrickleThreshold, UDINT, 674272928 (32)
        GVL_Logger.nTrickleTripTime, TIME, 674190528 (32)
        GVL_Logger.nTripResetPeriod, TIME, 674190560 (32)
        GVL_Logger.sIpTidbit, STRING(6), 674190368 (56)
        GVL_Logger.sPlcHostname, STRING(80), 674190592 (648)
        GVL_Logger.TCPADS_MAXUDP_BUFFSIZE, UDINT, 674191264 (32)

.. raw:: html

   </details>
   <br />


GVL_Param_TcUnit
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Param_TcUnit.AdsLogMessageFifoRingBufferSize, UINT, 4310176 (16)
        GVL_Param_TcUnit.LogExtendedResults, BOOL, 4303320 (8)
        GVL_Param_TcUnit.MaxNumberOfAssertsForEachTestSuite, UINT, 4308064 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 4308048 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 4308032 (16)
        GVL_Param_TcUnit.xUnitBufferSize, UDINT, 4308096 (32)
        GVL_Param_TcUnit.xUnitEnablePublish, BOOL, 4308080 (8)
        GVL_Param_TcUnit.xUnitFilePath, STRING(255), 4308128 (2048)


GVL_TcUnit
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_TcUnit.AdsMessageQueue, FB_AdsLogStringMessageFifoQueue, 626171264 (8320864)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 4310192 (8)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 626137184 (2048)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 626137152 (32)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 4310200 (8)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 626139232 (16)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 4310208 (621826944)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 626139264 (32000)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 4308088 (8)


ParameterList
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        ParameterList.cSourceNameSize, UDINT, 4305408 (32)


RUN_TESTS
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        RUN_TESTS.CbTest, FB_CircuitBreaker_Test, 634519680 (39667840)


TC_EVENT_CLASSES
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENT_CLASSES.LCLSGeneralEventClass, GUID, 674329312 (128)
        TC_EVENT_CLASSES.TcGeneralAdsEventClass, GUID, 674328800 (128)
        TC_EVENT_CLASSES.TcRouterEventClass, GUID, 674328928 (128)
        TC_EVENT_CLASSES.TcRTimeEventClass, GUID, 674329056 (128)
        TC_EVENT_CLASSES.TcSystemEventClass, GUID, 674328672 (128)
        TC_EVENT_CLASSES.Win32EventClass, GUID, 674329184 (128)


TC_EVENTS
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENTS.LCLSGeneralEventClass, LCLSGeneralEventClass, 674319648 (960)


TwinCAT_SystemInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_SystemInfoVarList.__Task_3, _Implicit_Task_Info, 674276320 (704)
        TwinCAT_SystemInfoVarList._AppInfo, PlcAppSystemInfo, 674273184 (2048)
        TwinCAT_SystemInfoVarList._TaskInfo, PlcTaskSystemInfo, 674275264 (1024)
        TwinCAT_SystemInfoVarList._TaskOid_Task_3, OTCID, 674276288 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_Task_3, OTCID, 674275232 (32)


